--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.endie.avizandum</groupId>
     <artifactId>classlib</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>classlib</name>
     <description>Shared class library for avizandum</description>
 
